chartink fix